kubepanel-install.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubepanel
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubepanel
  namespace: kubepanel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubepanel
  template:
    metadata:
      labels:
        app: kubepanel
    spec:
      #automountServiceAccountToken: false
      volumes:
      - name: kubepanel
        persistentVolumeClaim:
          claimName: kubepanel
      - persistentVolumeClaim:
          claimName: dkim-privkeys-pvc
        name: dkim-privkeys
      containers:
      - name: dashboard
        image: docker.io/laszlokulcsar/dashboard:v0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: kubepanel
          mountPath: /kubepanel
        - name: dkim-privkeys
          mountPath: /dkim-privkeys
      - name: watchdog
        image: docker.io/laszlokulcsar/watchdog:v0.1
        imagePullPolicy: Always
        volumeMounts:
        - name: kubepanel
          mountPath: /kubepanel
---
apiVersion: v1
kind: Service
metadata:
  name: kubepanel
  namespace: kubepanel
spec:
  type: ClusterIP
  selector:
    app: kubepanel
  ports:
  - name: django
    port: 8000
    targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: kubepanel
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: public
  tls:
  - hosts:
    - <KUBEPANEL_DOMAIN>
    secretName: kubepanel-cert
  rules:
  - host: "<KUBEPANEL_DOMAIN>"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubepanel
            port:
              number: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opendkim
  namespace: kubepanel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opendkim
  template:
    metadata:
      labels:
        app: opendkim
    spec:
     containers:
      - name: opendkim
        image: docker.io/laszlokulcsar/opendkim:v0.1
        imagePullPolicy: Always
        volumeMounts:
        - name: dkim-keytable
          mountPath: "/etc/opendkim/KeyTable"
          subPath: "KeyTable"
        - name: dkim-signingtable
          mountPath: "/etc/opendkim/SigningTable"
          subPath: "SigningTable"
        - name: dkim-privkeys
          mountPath: "/etc/opendkim/keys/"
          readOnly: true
        imagePullPolicy: Always
        ports:
        - containerPort: 8891
     volumes:
     - configMap:
         name: dkim-keytable
       name: dkim-keytable
     - configMap:
         name: dkim-signingtable
       name: dkim-signingtable
     - persistentVolumeClaim:
         claimName: dkim-privkeys-pvc
       name: dkim-privkeys
---
apiVersion: v1
kind: Service
metadata:
  name: opendkim
  namespace: kubepanel
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: opendkim
    port: 8891
    protocol: TCP
    targetPort: 8891
  selector:
    app: opendkim
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp
  namespace: kubepanel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp
  template:
    metadata:
      labels:
        app: smtp
    spec:
     containers:
      - name: smtp
        image: docker.io/laszlokulcsar/smtp:v0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 25
---
apiVersion: v1
kind: Service
metadata:
  name: smtp
  namespace: kubepanel
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: smtp
    port: 25
    protocol: TCP
    targetPort: 25
  selector:
    app: smtp
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: kubepanel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      volumes:
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: mariadb-pvc
      containers:
      - name: mariadb
        image: mariadb
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mariadb-data
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: kubepanel
spec:
  selector:
    app: mariadb
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
    name: mariadb
